# controller/sales_controller.go
@@ -1,8 +1,10 @@
 package controller
 
 import (
-	"flash_sale_management/dto"
+	"flash_sale_management/dto/request"
+	"flash_sale_management/dto/response"
 	"flash_sale_management/service"
+	"flash_sale_management/utils"
 	"github.com/gofiber/fiber/v2"
 	"github.com/gofiber/fiber/v2/log"
 	"net/http"
@@ -18,32 +20,62 @@ func New(salesService service.SalesService) SalesController {
 	return controller
 }
 
-// CreateFlashSale ShowAccount godoc
+// CreateFlashSale godoc
 //
 //	@Summary		Create Flash Sale
 //	@Tags			Sales
 //	@Accept			json
 //	@Produce		json
-//	@Param			request body dto.CreateSaleRequest true "Request Body"
-//	@Success  		201 "Created"
-//	@Failure  		400 "Bad Request"
+//	@Param			request body request.CreateSaleRequest true "Request Body"
+//	@Success		201 {object} response.SaleResponse "Created"
+//	@Failure		400 {string} string "Bad Request"
 //	@Router			/flash-sales [post]
 func (s *SalesController) CreateFlashSale(c *fiber.Ctx) error {
 	c.Accepts("application/json")
-	saleRequest := new(dto.CreateSaleRequest)
+	saleRequest := new(request.CreateSaleRequest)
 
 	if err := c.BodyParser(saleRequest); err != nil {
-		log.Errorf("request validation error : %v", err.Error())
-		return c.Status(http.StatusBadRequest).SendString(err.Error())
+		return c.Status(http.StatusBadRequest).
+			SendString(utils.CreateLogMessage("error parsing body", err))
 	}
+
 	sale, err := s.salesService.CreateSale(*saleRequest)
 	if err != nil {
 		return c.Status(http.StatusBadRequest).SendString(err.Error())
 	}
 
-	_, err = s.salesService.SaveSale(sale)
+	sale, err = s.salesService.SaveSale(sale)
 	if err == nil {
-		return c.SendStatus(http.StatusCreated)
+		saleResponse := (&response.SaleResponse{}).FromEntity(sale)
+		return c.Status(http.StatusCreated).JSON(saleResponse)
+	} else {
+		return c.Status(http.StatusBadRequest).SendString(err.Error())
+	}
+}
+
+// UpdateFlashSale ShowAccount godoc
+//
+//	@Summary		Update Flash Sale
+//	@Tags			Sales
+//	@Accept			json
+//	@Produce		json
+//	@Param			request body request.UpdateSaleRequest true "Request Body"
+//	@Success		200 {object} response.SaleResponse "Ok"
+//	@Failure		400 {string} string "Bad Request"
+//	@Router			/flash-sales [put]
+func (s *SalesController) UpdateFlashSale(c *fiber.Ctx) error {
+	c.Accepts("application/json")
+	saleRequest := new(request.UpdateSaleRequest)
+
+	if err := c.BodyParser(saleRequest); err != nil {
+		return c.Status(http.StatusBadRequest).
+			SendString(utils.CreateLogMessage("error parsing body", err))
+	}
+
+	updatedSale, err := s.salesService.UpdateSale(*saleRequest)
+	if err == nil {
+		saleResponse := (&response.SaleResponse{}).FromEntity(updatedSale)
+		return c.Status(http.StatusOK).JSON(saleResponse)
 	} else {
 		return c.Status(http.StatusBadRequest).SendString(err.Error())
 	}
@@ -55,21 +87,24 @@ func (s *SalesController) CreateFlashSale(c *fiber.Ctx) error {
 //	@Tags			Sales
 //	@Produce		json
 //	@Param			id path int true "Flash Sale ID"
-//	@Success  		200 "Ok"
+//	@Success		200 {object} response.SaleResponse "Ok"
+//	@Failure		400 {string} string "Bad Request"
 //	@Router			/flash-sales/{id} [get]
 func (s *SalesController) GetFlashSale(c *fiber.Ctx) error {
 	id := c.Params("id")
 	saleID, err := strconv.Atoi(id)
 	if err != nil {
-		return err
+		return c.Status(http.StatusBadRequest).
+			SendString(utils.CreateLogMessage("wrong parameter. convert failed", err))
 	}
 
 	sales, err := s.salesService.FindSale(saleID)
-	if err != nil {
+	if err == nil {
+		saleResponse := (&response.SaleResponse{}).FromEntity(sales)
+		return c.Status(http.StatusOK).JSON(saleResponse)
+	} else {
 		return c.Status(http.StatusBadRequest).SendString(err.Error())
 	}
-
-	return c.JSON(sales)
 }
 
 // GetFlashSales ShowAccount godoc
@@ -77,40 +112,31 @@ func (s *SalesController) GetFlashSale(c *fiber.Ctx) error {
 //	@Summary		Get Flash All Sale
 //	@Tags			Sales
 //	@Produce		json
-//	@Success  		200 "Ok"
+//	@Success		200 {object} []response.SaleResponse "Ok"
+//	@Failure		400 {string} string "Bad Request"
 //	@Router			/flash-sales [get]
 func (s *SalesController) GetFlashSales(c *fiber.Ctx) error {
 	sales, err := s.salesService.FindSales()
 	if err != nil {
-		return err
+		return c.Status(http.StatusBadRequest).
+			SendString(utils.CreateLogMessage("error getting all sales", err))
 	}
 
-	return c.JSON(sales)
-}
+	var saleResponses []response.SaleResponse
+	for _, sale := range *sales {
+		if sale.ID == 0 {
+			continue
+		}
 
-// UpdateFlashSale ShowAccount godoc
-//
-//	@Summary		Update Flash Sale
-//	@Tags			Sales
-//	@Accept			json
-//	@Produce		json
-//	@Param			request body dto.UpdateSaleRequest true "Request Body"
-//	@Success  		201 "Created"
-//	@Failure  		400 "Bad Request"
-//	@Router			/flash-sales [put]
-func (s *SalesController) UpdateFlashSale(c *fiber.Ctx) error {
-	c.Accepts("application/json")
-	saleRequest := new(dto.UpdateSaleRequest)
+		saleResponse := (&response.SaleResponse{}).FromEntity(&sale)
+		saleResponses = append(saleResponses, saleResponse)
+	}
 
-	if err := c.BodyParser(saleRequest); err != nil {
-		return err
+	if saleResponses == nil || len(saleResponses) == 0 {
+		return c.Status(http.StatusOK).JSON("sales not found")
 	}
-	_, err := s.salesService.UpdateSale(*saleRequest)
-	if err == nil {
-		return c.SendStatus(http.StatusOK)
-	} else {
-		return c.Status(http.StatusBadRequest).SendString(err.Error())
-	}
+
+	return c.Status(http.StatusOK).JSON(saleResponses)
 }
 
 // DeleteFlashSale ShowAccount godoc
@@ -125,11 +151,13 @@ func (s *SalesController) DeleteFlashSale(c *fiber.Ctx) error {
 	id := c.Params("id")
 	saleID, err := strconv.Atoi(id)
 	if err != nil {
-		return err
+		return c.Status(http.StatusBadRequest).
+			SendString(utils.CreateLogMessage("wrong parameter. convert failed", err))
 	}
 
-	_, err = s.salesService.DeleteSale(saleID)
+	err = s.salesService.DeleteSale(saleID)
 	if err != nil {
+		log.Errorf(err.Error())
 		return c.Status(http.StatusBadRequest).SendString(err.Error())
 	}
 
@@ -144,16 +172,20 @@ func (s *SalesController) DeleteFlashSale(c *fiber.Ctx) error {
 //	@Success  		200 "Ok"
 //	@Router			/flash-sales/{id}/buy [post]
 func (s *SalesController) BuyProduct(c *fiber.Ctx) error {
-	w8 := c.Query("wait", "5")
+	// wait for transaction and race condition testing
+	w8 := c.Query("wait", "1")
+
 	id := c.Params("id")
 	saleID, err := strconv.Atoi(id)
 	if err != nil {
-		return err
+		return c.Status(http.StatusBadRequest).
+			SendString(utils.CreateLogMessage("wrong parameter. convert failed", err))
 	}
 
 	wait, err := strconv.Atoi(w8)
 	if err != nil {
-		return err
+		return c.Status(http.StatusBadRequest).
+			SendString(utils.CreateLogMessage("wrong parameter. convert failed", err))
 	}
 
 	buy, err := s.salesService.Buy(saleID, wait)
