# docs/swagger.json
@@ -2,13 +2,8 @@
     "swagger": "2.0",
     "info": {
         "contact": {
-            "name": "API Support",
-            "url": "http://www.swagger.io/support",
-            "email": "support@swagger.io"
-        },
-        "license": {
-            "name": "Apache 2.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+            "name": "Flash Sale Management",
+            "email": "jerdem.akyildiz@gmail.com"
         }
     },
     "paths": {
@@ -23,7 +18,19 @@
                 "summary": "Get Flash All Sale",
                 "responses": {
                     "200": {
-                        "description": "Ok"
+                        "description": "Ok",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/response.SaleResponse"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             },
@@ -45,16 +52,22 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.UpdateSaleRequest"
+                            "$ref": "#/definitions/request.UpdateSaleRequest"
                         }
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Created"
+                    "200": {
+                        "description": "Ok",
+                        "schema": {
+                            "$ref": "#/definitions/response.SaleResponse"
+                        }
                     },
                     "400": {
-                        "description": "Bad Request"
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             },
@@ -76,16 +89,22 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.CreateSaleRequest"
+                            "$ref": "#/definitions/request.CreateSaleRequest"
                         }
                     }
                 ],
                 "responses": {
                     "201": {
-                        "description": "Created"
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/response.SaleResponse"
+                        }
                     },
                     "400": {
-                        "description": "Bad Request"
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             }
@@ -110,7 +129,16 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Ok"
+                        "description": "Ok",
+                        "schema": {
+                            "$ref": "#/definitions/response.SaleResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             },
@@ -156,13 +184,13 @@
         }
     },
     "definitions": {
-        "dto.CreateSaleRequest": {
+        "request.CreateSaleRequest": {
             "type": "object",
             "required": [
                 "discount",
                 "endTime",
                 "product_id",
-                "quantity",
+                "saleStock",
                 "startTime"
             ],
             "properties": {
@@ -175,7 +203,7 @@
                 "product_id": {
                     "type": "integer"
                 },
-                "quantity": {
+                "saleStock": {
                     "type": "integer"
                 },
                 "startTime": {
@@ -183,7 +211,7 @@
                 }
             }
         },
-        "dto.UpdateSaleRequest": {
+        "request.UpdateSaleRequest": {
             "type": "object",
             "required": [
                 "id"
@@ -201,7 +229,30 @@
                 "id": {
                     "type": "integer"
                 },
-                "quantity": {
+                "saleStock": {
+                    "type": "integer"
+                },
+                "startTime": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.SaleResponse": {
+            "type": "object",
+            "properties": {
+                "active": {
+                    "type": "boolean"
+                },
+                "discount": {
+                    "type": "number"
+                },
+                "endTime": {
+                    "type": "string"
+                },
+                "product_id": {
+                    "type": "integer"
+                },
+                "saleStock": {
                     "type": "integer"
                 },
                 "startTime": {
