# dto/request/models.go
@@ -1,4 +1,4 @@
-package dto
+package request
 
 import (
 	"github.com/go-playground/validator/v10"
@@ -8,7 +8,7 @@ var validate = validator.New()
 
 type CreateSaleRequest struct {
 	ProductID int     `json:"product_id" validate:"required"`
-	Quantity  int     `json:"quantity" validate:"required,gt=1"`
+	SaleStock int     `json:"saleStock" validate:"required,gt=1"`
 	Discount  float64 `json:"discount" validate:"required,gt=1"`
 	StartTime string  `json:"startTime" validate:"required"`
 	EndTime   string  `json:"endTime" validate:"required"`
@@ -21,7 +21,7 @@ func (req *CreateSaleRequest) Validate() error {
 type UpdateSaleRequest struct {
 	ID        int     `json:"id" validate:"required"`
 	Discount  float64 `json:"discount"`
-	Quantity  int     `json:"quantity"`
+	SaleStock int     `json:"saleStock"`
 	StartTime string  `json:"startTime"`
 	EndTime   string  `json:"endTime"`
 	Active    bool    `json:"active"`
